--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@apollo/server": "^4.7.1",
     "@graphql-tools/schema": "^9.0.19",
+    "@prisma/client": "^5.0.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "graphql": "^16.6.0",
     "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.12.1",
+    "prisma": "^5.0.0",
     "uuid": "^9.0.0",
     "ws": "^8.13.0"
   }
